// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> matches snapshot when alive 1`] = `
<body>
  <div>
    <button
      aria-label="Cell 1,2"
      aria-pressed="true"
      class="sc-bdvvtL ipWMZu"
    />
  </div>
</body>
`;

exports[`<Cell /> matches snapshot when dead 1`] = `
<body>
  <div>
    <button
      aria-label="Cell 1,2"
      aria-pressed="false"
      class="sc-bdvvtL jrqIUZ"
    />
  </div>
</body>
`;
